# CleanCode

./: .gitignore  CMakeLists.txt  README.md
CFGParser/: CFGPairs.cpp  CFGPairs.h  Source_test.cpp
CFGParser/parser_source/: Compiler.cpp  Compiler.h  Parser.cpp  Parser.h
